# myopengltest

./: CMakeLists.txt  LoadShaders.cpp  LoadShaders.h  conanfile.txt  main.cpp  triangles.frag  triangles.vert
